# csr-utils

./: .gitignore  CombineShares.py  GenerateKeys.py  GenerateSplitKeys.py  README.md  SplitKey.py  encoding_functions.py  prova.py  pyproject.toml  requirements.txt
csr_utils/: pyproject.toml
csr_utils/csr_utils/: CombineShares.py  GenerateKeys.py  GenerateSplitKeys.py  SplitKey.py
csr_utils/csr_utils/utils/: encoding_functions.py
