[tool.poetry]
name = "csr-utils"
version = "0.1.0"
description = ""
authors = ["Raj Panesar <raj.panesar@colossus.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "3.4.7"
utilitybelt = "0.2.6"
logging = "^0.4.9.6"

[tool.poetry.dependencies.secretsharing]
git = "https://github.com/blockstack/secret-sharing.git"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
