[tool.poetry]
name = "csr_utils"
version = "0.1.0"
description = "This repository contains a set of scripts to create and manage key pairs (public and private key)."
authors = ["Colossus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "3.4.7"
utilitybelt = "0.2.6"
logging = "^0.4.9.6"

[tool.poetry.dependencies.secretsharing]
git = "https://github.com/blockstack/secret-sharing.git"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"